--- a/MyResume/index.html
+++ b/MyResume/index.html
@@ -30,7 +30,7 @@
                     <li>政治面貌：共青团员</li>
                 </ul>
                 <figure class="profile-pic">
-                    <img src="/img/masked.jpg" alt="Profile Picture" title="My Profile Picture" width="1280" height="1280">
+                    <img src="img/masked.jpg" alt="Profile Picture" title="My Profile Picture" width="1280" height="1280">
                 </figure>
             </div>
     </section>
